tests/sumo/errors/too_many_teleports/output.sumo
Loading net-file from 'net.net.xml' ... done (4ms).
Loading done.
Simulation version v1_3_1+0814-be0565a24f started with time: 0.00
Simulation ended at time: 2612.00
Reason: Too many teleports.
Performance: 
 Duration: 1524ms
 Real time factor: 1713.91
 UPS: 199353.674541
Vehicles: 
 Inserted: 206 (Loaded: 252)
 Running: 204
 Waiting: 46
Teleports: 6 (Jam: 1, Yield: 3, Wrong Lane: 2)

